--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
+logs/
 .vscode
 .DS_Store
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
+code/logs/
+.ipynb_checkpoints/
 # C extensions
 *.so
 
